--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,6 @@ composer.lock
 .DS_Store
 Thumbs.db
 /app/config/local/database.php
+/app/config/database.php
+/app/config/app.php
 /bootstrap/start.php
